--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -1,6 +1,5 @@
 <h1>Welcome</h1>
-<p>This is Motus Posts 1.0</p>
-<p>Posts from the Motus Development Team</p>
+<p>This is MotusPosts, a place where the Motus team can express it's ideas and post interetsing stuff to pass the time. </p>
 {{#if user}}
 {{else}}
 <a href="/auth/google" class="btn red darken-1"><i class="fa fa-google left"></i>Login with Google</a>
