--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -1,12 +1,12 @@
-<nav class="grey darken-3">
+<nav class="blue-grey darken-4">
   <div class="container">
     <div class="nav-wrapper">
-      <a href="/posts" class="brand-logo center">Motus Posts</a>
-      <a href="#" data-activates="main-nav" class="button-collapse show-on-large"><i class="fa fa-bars"></i></a>
+      <a href="/" class="brand-logo center">MotusPosts</a>
+      <a href="#" data-activates="main-nav" class="button-collapse show-on-large"><i class="fa fa-bars fa-2x"></i></a>
       <!-- right nav -->
       <ul class="right hide-on-small-only">
         {{#if user}}
-          <li><a href="/dashboard">Welcome {{user.fistname}}</a></li>
+          <li><a href="/dashboard">Welcome {{user.firstname}}</a></li>
           <li><a href="/auth/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
         {{else}}
           <li><a href="/posts"><i class="fa fa-book"></i>  Public Posts</a></li>
