UI Updates Added Clone Functionality

--- a/views/index/about.handlebars
+++ b/views/index/about.handlebars
@@ -1,3 +1,7 @@
-<h1>About</h1>
-<p>Version 1.0</p>
-<p>MotusPosts is Node based application for creating and sharing posts.</p>
+<h1 class="page-title">About</h1>
+<div class="row">
+    <div class="col m12">
+        <p>Version 1.0</p>
+        <p>MotusPosts is Node based application for creating and sharing posts.</p>
+    </div>
+</div>
