--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,22 +1,26 @@
-<footer class="page-footer blue-grey darken-4">
-         <div class="container">
-           <div class="row">
-             <div class="col l6 s12">
-               <h5 class="white-text">MotusPosts</h5>
-               <p class="grey-text text-lighten-4">Read the newest ideas and posts from the Motus team.</p>
-             </div>
-             <div class="col l4 offset-l2 s12">
-               <h5 class="white-text">Links</h5>
-               <ul>
-                 <li><a class="grey-text text-lighten-3" href="/posts">Public Posts</a></li>
-                 <li><a class="grey-text text-lighten-3" href="/about">About</a></li>
-               </ul>
-             </div>
-           </div>
-         </div>
-         <div class="footer-copyright">
-           <div class="container">
-           © 2017 Copyright MotusPosts
-           </div>
-         </div>
-       </footer>
+<footer class="page-footer deep-purple darken-2">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">MotusPosts</h5>
+        <p class="grey-text text-lighten-4">Read the newest ideas and posts from the Motus team.</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Links</h5>
+        <ul>
+          <li>
+            <a class="grey-text text-lighten-3" href="/posts">Public Posts</a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3" href="/about">About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+      © 2017 Copyright MotusPosts
+    </div>
+  </div>
+</footer>
