--- a/views/posts/edit.handlebars
+++ b/views/posts/edit.handlebars
@@ -1,37 +1,39 @@
-<h1>Edit Post</h1>
+<h1 class="page-title">Edit Post</h1>
 <div class="row">
-    <form action="/posts/{{post.id}}?_method=PUT" method="post">
-        <div class="input-field">
-            <label>Title</label>
-            <input type="text" name="title" value="{{post.title}}">
-        </div>
-        <div class="input-field">
-            <select name="status">
-                {{#select post.status}}
-                <option value="Public" selected>Public</option>
-                <option value="Private">Private</option>
-                <option value="Unpublished">Unpublished</option>
-                {{/select}}
-            </select>
-            <label>Status</label>
-        </div>
-        <label>Allow Comments</label>
-        <!-- Switch -->
-        <div class="switch">
-            <label>
-                Off
-                <input type="checkbox" name="allowComments" {{#if post.allowComments}}  checked="checked" {{/if}}>
-                <span class="lever"></span>
-                On
-            </label>
-        </div>
-        <div class="input-field">
-            <h5>Your Post Content</h5>
-            <textarea name="body" class="materialize-textarea">{{post.body}}</textarea>
-        </div>
-
-        <div class="input-field">
-            <input type="submit" value="Submit" class="btn teal">
-        </div>
-    </form>
+    <div class="col m12">
+        <form action="/posts/{{post.id}}?_method=PUT" method="post">
+            <div class="input-field">
+                <label>Title</label>
+                <input type="text" name="title" value="{{post.title}}">
+            </div>
+            <div class="input-field">
+                <select name="status">
+                    {{#select post.status}}
+                    <option value="Public" selected>Public</option>
+                    <option value="Private">Private</option>
+                    <option value="Unpublished">Unpublished</option>
+                    {{/select}}
+                </select>
+                <label>Status</label>
+            </div>
+            <label>Allow Comments</label>
+            <!-- Switch -->
+            <div class="switch">
+                <label>
+                    Off
+                    <input type="checkbox" name="allowComments" {{#if post.allowComments}} checked="checked" {{/if}}>
+                    <span class="lever"></span>
+                    On
+                </label>
+            </div>
+            <div class="input-field">
+                <h5>Your Post Content</h5>
+                <textarea name="body" class="materialize-textarea">{{post.body}}</textarea>
+            </div>
+        
+            <div class="input-field">
+                <input type="submit" value="Submit" class="btn teal">
+            </div>
+        </form>
+    </div>
 </div>
