--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,34 +1,61 @@
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
 
-  main {
-    flex: 1 0 auto;
-  }
+main {
+  flex: 1 0 auto;
+}
 
-  .mb-1{
-    margin-bottom: 10px;
-  }
-  .mb-2{
-    margin-bottom: 20px;
-  }
-  .mb-3{
-    margin-bottom: 30px;
-  }
-  .mb-4{
-    margin-bottom: 40px;
-  }
-  .mb-5{
-    margin-bottom: 50px;
-  }
+.mb-1 {
+  margin-bottom: 10px;
+}
 
+.mb-2 {
+  margin-bottom: 20px;
+}
 
-  .post-text{
-    min-height: 240px;
-  }
+.mb-3 {
+  margin-bottom: 30px;
+}
 
-  #delete-form{
-    display: inline;
-  }
+.mb-4 {
+  margin-bottom: 40px;
+}
+
+.mb-5 {
+  margin-bottom: 50px;
+}
+
+.page-title {
+  font-size: 42px;
+  margin-bottom: 10px;
+  margin-top: 50px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.author {
+  margin-top: 50px;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+.post-text {
+  min-height: 240px;
+}
+
+#delete-form, #clone-form {
+  display: inline;
+}
+
+.navbar-wrapper{
+  height: auto;
+}
+  .brand-logo img {
+ width: 50px;
+ margin-top: 7px
+}
