--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -1,6 +1,11 @@
-<h1>Welcome</h1>
-<p>This is MotusPosts, a place where the Motus team can express it's ideas and post interetsing stuff to pass the time. </p>
-{{#if user}}
-{{else}}
-<a href="/auth/google" class="btn red darken-1"><i class="fa fa-google left"></i>Login with Google</a>
-{{/if}}
+<h1 class="page-title center">Welcome</h1>
+<div class="row">
+    <div class="col s12 m6 push-m3 center">
+        <p>This is MotusPosts, a place where the Motus team can express it's ideas and post interetsing stuff to pass the time.
+            </p>
+        {{#if user}} {{else}}
+        <a href="/auth/google" class="btn red darken-1">
+            <i class="fa fa-google left"></i>Login with Google</a>
+        {{/if}}
+    </div>
+</div>
