--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -1,7 +1,7 @@
 <nav class="blue-grey darken-4">
   <div class="container">
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo center">MotusPosts</a>
+      <a href="/" class="brand-logo center"><img src="/img/motus-logo.png" alt="Motus Logo" class="responsive-img"></a>
       <a href="#" data-activates="main-nav" class="button-collapse show-on-large"><i class="fa fa-bars fa-2x"></i></a>
       <!-- right nav -->
       <ul class="right hide-on-small-only">
