--- a/views/posts/add.handlebars
+++ b/views/posts/add.handlebars
@@ -1,35 +1,37 @@
-<h1>Add Posts</h1>
+<h1 class="page-title">Add Post</h1>
 <div class="row">
-  <form action="/posts" method="post">
-    <div class="input-field">
-      <label>Title</label>
-      <input type="text" name="title">
-    </div>
-    <div class="input-field">
-      <select name="status">
-     <option value="Public" selected>Public</option>
-     <option value="Private">Private</option>
-     <option value="Unpublished">Unpublished</option>
-   </select>
-      <label>Status</label>
-    </div>
-    <label>Allow Comments</label>
-    <!-- Switch -->
-    <div class="switch">
-      <label>
-    Off
-    <input type="checkbox"  name="allowComments" checked>
-    <span class="lever"></span>
-    On
-  </label>
-    </div>
-    <div class="input-field">
-      <h5>Your Post Content</h5>
-      <textarea name="body" class="materialize-textarea"></textarea>
-    </div>
-
-    <div class="input-field">
-      <input type="submit" value="Submit" class="btn teal">
-    </div>
-  </form>
+  <div class="col m12">
+    <form action="/posts" method="post">
+      <div class="input-field">
+        <label>Title</label>
+        <input type="text" name="title">
+      </div>
+      <div class="input-field">
+        <select name="status">
+          <option value="Public" selected>Public</option>
+          <option value="Private">Private</option>
+          <option value="Unpublished">Unpublished</option>
+        </select>
+        <label>Status</label>
+      </div>
+      <label>Allow Comments</label>
+      <!-- Switch -->
+      <div class="switch">
+        <label>
+          Off
+          <input type="checkbox" name="allowComments" checked>
+          <span class="lever"></span>
+          On
+        </label>
+      </div>
+      <div class="input-field">
+        <h5>Your Post Content</h5>
+        <textarea name="body" class="materialize-textarea"></textarea>
+      </div>
+    
+      <div class="input-field">
+        <input type="submit" value="Submit" class="btn teal">
+      </div>
+    </form>
+  </div>
 </div>
