--- a/views/posts/show.handlebars
+++ b/views/posts/show.handlebars
@@ -1,36 +1,35 @@
 <div class="row">
     <div class="col s12 m8">
-        <h3>{{post.title}} <small>{{{editIcon post.user.id user.id post.id false}}}</small></h3>
-        <span>{{formatDate post.date 'MMMM Do YYYY'}}</span>
-        {{{post.body}}} 
-        {{#if post.allowComments}}
+        <h1 class="page-title">{{post.title}}
+            <small>{{{editIcon post.user.id user.id post.id false}}}</small>
+        </h1>
+        <span>Posted on {{formatDate post.date 'MMMM Do YYYY'}}</span>
+        {{{post.body}}} {{#if post.allowComments}}
         <h5>Comments</h5>
         {{#if user}}
         <form action="/posts/comment/{{post.id}}" method="POST">
-        <div class="input-field">
-            <textarea name="commentBody" class="materialize-textarea"></textarea>
-            <label for="commentBody">Leave a comment.</label>
-        </div>
-        <input type="submit" value="Submit" class="btn">
-        </form>
-        {{else}} 
-        <a href="/auth/google">You have to log in to leave a comment!</a>
-        {{/if}} 
-        {{#each post.comments}}
-            <div class="card">
-                
-                <div class="card-content">
-                    <div class="chip mb-2">
-                        <img src="{{commentUser.image}}" alt="Comment User Avatar"> <a href="/posts/user/{{commentUser.id}}">{{commentUser.firstname}} {{commentUser.lastname}}</a> 
-                    </div> on {{formatDate commentDate "MMMM Do YYYY"}}
-                    <p class="mb-2">{{commentBody}}</p>
-                </div>
+            <div class="input-field">
+                <textarea name="commentBody" class="materialize-textarea"></textarea>
+                <label for="commentBody">Leave a comment.</label>
             </div>
-        {{/each}}
-        {{/if}}
+            <input type="submit" value="Submit" class="btn">
+        </form>
+        {{else}}
+        <a href="/auth/google">You have to log in to leave a comment!</a>
+        {{/if}} {{#each post.comments}}
+        <div class="card">
+            <div class="card-content">
+                <div class="chip mb-2">
+                    <img src="{{commentUser.image}}" alt="Comment User Avatar">
+                    <a href="/posts/user/{{commentUser.id}}">{{commentUser.firstname}} {{commentUser.lastname}}</a>
+                </div> commented on {{formatDate commentDate "MMMM Do YYYY"}}
+                <p class="mb-2">{{commentBody}}</p>
+            </div>
+        </div>
+        {{/each}} {{/if}}
     </div>
     <div class="col s12 m4">
-        <div class="card post center">
+        <div class="card author center">
             <div class="card-content">
                 <span class="card-title">{{post.user.firstname}} {{post.user.lastname}}</span>
                 <img src="{{post.user.image}}" alt="User Avatar" class="circle responsive-img" width="150px">
