--- a/views/posts/add.handlebars
+++ b/views/posts/add.handlebars
@@ -1,6 +1,6 @@
 <h1 class="page-title">Add Post</h1>
 <div class="row">
-  <div class="col m12">
+  <div class="col s12 m12">
     <form action="/posts" method="post">
       <div class="input-field">
         <label>Title</label>
