--- a/views/posts/edit.handlebars
+++ b/views/posts/edit.handlebars
@@ -1,6 +1,6 @@
 <h1 class="page-title">Edit Post</h1>
 <div class="row">
-    <div class="col m12">
+    <div class="col s12 m12">
         <form action="/posts/{{post.id}}?_method=PUT" method="post">
             <div class="input-field">
                 <label>Title</label>
