--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,4 +1,4 @@
-<footer class="page-footer deep-purple darken-2">
+<footer class="page-footer grey darken-4">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
