--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -1,4 +1,4 @@
-<nav class="blue-grey darken-4">
+<nav class="deep-purple darken-4">
   <div class="container">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center"><img src="/img/motus-logo.png" alt="Motus Logo" class="responsive-img"></a>
