--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@ main {
 
 .page-title {
   font-size: 42px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   margin-top: 50px;
   padding-bottom: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
@@ -65,7 +65,9 @@ h2 {
   animation: blink .7s linear 1;
   margin-bottom: 20px;
 }
-
+.card{
+  margin-top: 15px
+}
 @keyframes blink{
  from{
    opacity: 0;
